Fix responsive header width on mobile

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,7 @@
 }
 
 .header__inner {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
